--- a/index2.html
+++ b/index2.html
@@ -2,11 +2,14 @@
 
 <head>
 
-    <title>ASG02</title>
+    <title>🏆 Real Madrid</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
+        crossorigin="anonymous"></script>
 
 </head>
 
@@ -14,8 +17,8 @@
     <header class="header">
         <nav class="navbar navbar-style">
             <div class="container">
-                
-                <div class="navbar-header">                    
+
+                <div class="navbar-header">
                     <a href=""><img class="pic1" src="pic1.png"></a>
                 </div>
 
@@ -26,9 +29,9 @@
                     <a class="nav-link disabled" href="#">Sponsors</a>
                     <a class="nav-link disabled" href="#">Tickets</a>
                     <a class="nav-link" href="index3.html">Follow Us</a>
-                </nav>                
-                                
-            </div>            
+                </nav>
+
+            </div>
         </nav>
 
 
