--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
             <div class="container">
 
                 <div class="navbar-header">
-                    <a href=""><img class="pic1" src="pic1.png"></a>
+                    <a href=""><img class="pic1" src="logo.png"></a>
                 </div>
 
                 <nav class="nav">
                     <a class="nav-link active" href="index.html">Home</a>
-                    <a class="nav-link" href="index2.html">Squad</a>
-                    <a class="nav-link disabled" href="#">Schedule</a>
+                    <a class="nav-link" href="index2.html">Squad 21/22</a>
+                    <a class="nav-link" href="index3.html">Squad 22/23</a>
+                    <a class="nav-link" href="index4.html">Schedule</a>
                     <a class="nav-link disabled" href="#">Sponsors</a>
                     <a class="nav-link disabled" href="#">Tickets</a>
-                    <a class="nav-link" href="index3.html">Follow Us</a>
+                    <a class="nav-link" href="index5.html">Follow Us</a>
                 </nav>
 
             </div>
@@ -40,11 +41,11 @@
                     <p class="big-text">Welcome to the home of Real Madrid. The 14 times European Champions!</p>
                 </div>
                 <div>
-                    <img src="pic2.jpg" class="img-fluid">
-                    <img src="pic3.jpg" class="img-fluid">
-                    <img src="pic4.jpg" class="img-fluid">
-                    <img src="pic5.jpg" class="img-fluid">
-                    <img src="pic7.jpg" class="img-fluid">
+                    <center><img src="pic2.jpg" class="img-fluid"></center>
+                    <center><img src="pic3.jpg" class="img-fluid"></center>
+                    <center><img src="pic4.jpg" class="img-fluid"></center>
+                    <center><img src="pic5.jpg" class="img-fluid"></center>
+                    <center><img src="pic7.jpg" class="img-fluid"></center>
                 </div>
             </div>
         </div>
