--- a/index3.html
+++ b/index3.html
@@ -10,8 +10,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 
 </head>
 
@@ -21,16 +19,17 @@
             <div class="container">
 
                 <div class="navbar-header">
-                    <a href=""><img class="pic1" src="pic1.png"></a>
+                    <a href=""><img class="pic1" src="logo.png"></a>
                 </div>
 
                 <nav class="nav">
                     <a class="nav-link" href="index.html">Home</a>
-                    <a class="nav-link" href="index2.html">Squad</a>
-                    <a class="nav-link disabled" href="#">Schedule</a>
+                    <a class="nav-link" href="index2.html">Squad 21/22</a>
+                    <a class="nav-link active" href="index3.html">Squad 22/23</a>
+                    <a class="nav-link" href="index4.html">Schedule</a>
                     <a class="nav-link disabled" href="#">Sponsors</a>
                     <a class="nav-link disabled" href="#">Tickets</a>
-                    <a class="nav-link active" href="index3.html">Follow Us</a>
+                    <a class="nav-link" href="index5.html">Follow Us</a>
                 </nav>
 
             </div>
@@ -40,17 +39,10 @@
         <div class="container">
             <div class="row">
                 <div>
-                    <p class="big-text">Follow the Champions everywhere they go</p>
+                    <p class="big-text">Real Madrid Squad 2022/23</p>
                 </div>
-
-                <div class="algn"><br><br>
-                    <a href="https://facebook.com/realmadrid" class="fa fa-facebook"></a>
-                    <a href="https://twitter.com/realmadrid" class="fa fa-twitter"></a>
-                    <a href="https://www.reddit.com/r/realmadrid/" class="fa fa-reddit"></a>
-                    <a href="https://www.youtube.com/user/realmadridcf" class="fa fa-youtube"></a>
-                    <a href="https://www.instagram.com/realmadrid" class="fa fa-instagram"></a>
-                    <a href="https://www.snapchat.com" class="fa fa-snapchat-ghost"></a>
-
+                <div>
+                    <center><img src="pic6.jpg" class="img-fluid"></center>
                 </div>
             </div>
         </div>
